[package]
name = "tally_export"
version = "0.1.0"
edition = "2021"

[dependencies]
xml_serde = "1.4.1"
serde = { version = "1.0.145", features = ["derive"] }
clap = { version = "4.0.17", features = ["derive"] }
csv = "1.1.6"
chrono = {version = "0.4.22", features = ["serde"]}
mongodb = {version ="2.2.2", features=["bson-chrono-0_4"]}
tokio = {version = "1.21.2", features=["rt"]}
futures = {version = "0.3.25", default-features = false, features = ["async-await"]}
zip = "0.6.2"
bytes = "1.1.0"